# search-engine-gui

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  CustomExceptions.hpp  mainwindow.h  settingsdialog.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  settingsdialog.cpp  settingsdialog.ui
